# gust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cli_commands.md  groceries.json  groceries_dict.json  list.json  most_recent_grocery_list.json  recipes.json
.github/workflows/: cargo-checkmate.yaml
cli-commands/: cli_commands.md  recipes.md
crates/api/: Cargo.toml
crates/api/src/: graphql.rs  lib.rs  persistence.rs  show.rs
crates/common/: Cargo.toml
crates/common/src/: commands.rs  export.rs  groceries.rs  groceriesitem.rs  helpers.rs  input.rs  item.rs  items.rs  lib.rs  list.rs  load.rs  recipes.rs  run_list.rs  run_shopping_list.rs  section.rs  sections.rs  shoppinglist.rs  telemetry.rs
crates/common/src/fetch/: fetch.rs
crates/common/src/fetcher/: mod.rs
crates/common/src/scraper/: mod.rs
crates/db/src/: lib.rs  persistence.rs
crates/db/src/json_db/: mod.rs
crates/grusterylist/: Cargo.toml
crates/grusterylist/src/: cli.rs  commands.rs  errors.rs  groceriesitem.rs  helpers.rs  lib.rs  migrate_json_db.rs  models.rs  persistence.rs  prompts.rs  run_groceries.rs  run_recipes.rs  show.rs  startup.rs
crates/gust/: Cargo.toml
crates/gust/src/: cli.rs  command.rs  lib.rs  main.rs  startup.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/2023-09-14-155309_tables/: down.sql  up.sql
crates/persistence/migrations/2023-09-14-155404_items_recipes/: down.sql
crates/persistence/src/: helpers.rs  lib.rs  models.rs  schema.rs  store.rs
crates/persistence/src/import_store/: mod.rs
crates/persistence/src/json/: migrate.rs  mod.rs
crates/persistence/src/json_db/: migrate_json_db.rs  mod.rs
crates/persistence/src/sqlite/: connection.rs  import.rs  migrations.rs  mod.rs
crates/persistence/src/sqlite_db/: mod.rs
docs/: cli.md  database.md  docker.md  recipes.md
docs/diagrams/: design.puml
migrations/2023-01-02-163620_groceries/: up.sql
src/: cli.rs  errors.rs  groceries.rs  groceriesitem.rs  helpers.rs  lib.rs  main.rs  migrate_json_db.rs  models.rs  persistence.rs  recipe.rs  recipes.rs  run.rs  run_groceries.rs  run_recipes.rs  run_shopping_list.rs  schema.rs  shoppinglist.rs  startup.rs
