[workspace]
resolver = "2"

members = [
    "crates/api",
    "crates/common",
    "crates/gust",
    "crates/persistence",
]

[workspace.dependencies]
assert_fs = "1.0"
clap = "4.1.14"
colored = "2.0.0"
diesel = { version = "2.0.2", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
insta = { version = "1.14.1", features = ["json"] }
question = "0.2.2"
reqwest = "0.11"
scraper = "0.17.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
url = "2.4.1"
