[workspace]
resolver = "2"

members = ["crates/api", "crates/common", "crates/gust", "crates/persistence"]

[workspace.dependencies]
assert_fs = "1.0"
clap = "4.1.14"
colored = "2.0.0"
diesel = { version = "2.0.2", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
futures = "0.3.28"
insta = { version = "1.14.1", features = ["json"] }
question = "0.2.2"
reqwest = "0.11"
r2d2 = "0.8.9"
scraper = "0.18.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "default",
  "registry",
  "env-filter",
  "json",
] }
url = "2.4.1"
