[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/suchapalaver"]
license = "MIT"
description = "A tool to make grocery lists written in Rust"
readme = "README.md"
repository = "https://github.com/suchapalaver/grusterylist"

[dependencies]
colored = { workspace = true }
common = { path = "../common" }
db = { path = "../persistence" }

[dev-dependencies]
