[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/suchapalaver"]
license = "MIT"
description = "A tool to make grocery lists written in Rust"
readme = "README.md"
repository = "https://github.com/suchapalaver/gust"

[dependencies]
async-trait = { workspace = true }
common = { path = "../common" }
diesel = { workspace = true }
futures = { workspace = true }
persistence = { path = "../persistence" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
