[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/suchapalaver"]
license = "MIT"
description = "A tool to make grocery lists written in Rust"
readme = "README.md"
repository = "https://github.com/suchapalaver/grusterylist"

[dependencies]
db = { path = "../db"}
diesel = { workspace = true }
diesel_migrations = { workspace = true }
question = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
insta = { workspace = true }
