[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/suchapalaver"]
license = "MIT"
description = "DB for making grocery lists"
readme = "README.md"
repository = "https://github.com/suchapalaver/grusterylist"

[dependencies]
common = { path = "../common" }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
