[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/suchapalaver"]
license = "MIT"
description = "DB for making grocery lists"
readme = "README.md"
repository = "https://github.com/suchapalaver/gust"

[dependencies]
async-trait = { workspace = true }
common = { path = "../common" }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
question = { workspace = true }
r2d2 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
insta = { workspace = true }
